[package]
name = "server_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-util = "0.3.30"
hyper = { version = "1.1.0", features = ["full", "server"] }
hyper-util = {version = "0.1.3", features = ["full"]}
hyper-rustls = "0.26.0"
rustls = "0.22.2"
rustls-pemfile = {version = "2.1.0", features = ["default"]}
tokio-rustls = "0.25.0"
redb = "1.5.0"
tokio = { features = ["full"], version = "1.36.0"}
tokio-util = "0.7.10"
http-body-util = "0.1.0"
